tests/duarouter/trips/errors/false_vehtype_dist/errors.duarouter
Error: Unknown vehicle type 'blub' in distribution '0'.
Error: Vehicle type distribution '0' is empty.
Error: The vehicle type '0' for vehicle '0' is not known.
Quitting (on error).
